--- a/Usuario/src/main/resources/application.yml
+++ b/Usuario/src/main/resources/application.yml
@@ -2,23 +2,21 @@ server:
   port: 8086
 spring:
   datasource:
-    driverClassName: org.h2.Driver
-    password: ''
-    url: jdbc:h2:mem:compass
-    username: sa
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    driverClassName: com.mysql.jdbc.Driver
+    password: ProjetoCompass22
+    url: jdbc:mysql://localhost:3306/usuariodb
+    username: root
+ 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     defer-datasource-initialization: true
+    show_sql: true
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
         format_sql: true
-        show_sql: true
+        
 
   application:
     name: 'usuario'
