--- a/Usuario/src/main/resources/application.yml
+++ b/Usuario/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    password: ProjetoCompass22
+    password: root
     url: jdbc:mysql://localhost:3306/usuariodb
     username: root
  
